plugins {
    id 'java'
    id 'application'
}

dependencies {
    implementation project(':lib')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'year2025.App'
    applicationDefaultJvmArgs = [
            '-Djansi.passthrough=true',
            '-Xss8m',
    ]
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
